[package]
name = "simplest-ot"
version = "0.1.0"
authors = ["danzipie <danzipie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "1.2.1", features = ["std"] }
ring = "0.16.5"

